# test_control-center

./: CMakeLists.txt  CMakeLists.txt.user.407c6c7  README.md
include/: namespace.h
src/: .diff.swp
src/frame/: CMakeLists.txt  main.cpp
src/frame/interfaces/: frameproxyinterface.h  moduleinterface.h
src/frame/modules/: networkworker.h
src/frame/modules/accounts/: avatarwidget.cpp  creationresult.cpp  creationresult.h  user.cpp  user.h  usermodel.cpp  usermodel.h
src/frame/modules/bluetooth/: adapter.cpp  adapter.h  bluetoothmodel.cpp  bluetoothmodel.h  bluetoothworker.cpp  bluetoothworker.h  device.cpp  device.h
src/frame/modules/network/: networkdevice.cpp  networkdevice.h  networkmodel.cpp  networkmodel.cpp.autosave  networkmodel.h  networkworker.cpp  networkworker.h  wireddevice.cpp  wireddevice.h  wirelessdevice.cpp  wirelessdevice.h
src/frame/widgets/: comboxwidget.cpp  contentwidget.cpp  dccsliderannotated.cpp  switchwidget.cpp
src/frame/window/: insertplugin.cpp  insertplugin.h  mainwindow.cpp  mainwindow.h  utils.h
src/frame/window/modules/accounts/: accountsdetailwidget.cpp  accountsdetailwidget.h  accountsmodule.cpp  accountsmodule.h  accountswidget.cpp  accountswidget.h  accountsworker.cpp  accountsworker.h  createaccountpage.cpp  createaccountpage.h
src/frame/window/modules/bluetooth/: adapterwidget.cpp  adapterwidget.h  bluetoothmodule.cpp  bluetoothmodule.h  bluetoothwidget.cpp  bluetoothwidget.h  detailpage.cpp  detailpage.h  devicesettingsitem.cpp  devicesettingsitem.h  titleedit.cpp  titleedit.h
src/frame/window/modules/network/: connectioneditpage.cpp  connectioneditpage.h  networkmodule.cpp  networkmodule.h  networkmodulewidget.cpp  networkmodulewidget.h  networkmodulewidget.h.autosave
